<resources>
    <string name="app_name">QuizApp</string>
    <string name="title">QuizApp</string>
    <string name="take_quiz">Take the quiz</string>
    <string name="see_list">See list</string>
    <string name="add_entry">Add entry</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="add">Add</string>
    <string name="profile">profile picture</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>
    <string name="button1">button1</string>
    <string name="button2">button2</string>
    <string name="button3">button3</string>
    <string name="score">Score:</string>
    <string name="submit">Submit</string>
    <string name="result">Submit</string>
    <string name="sortAZ">A-Z</string>
    <string name="sortZA">Z-A</string>
    <string name="back">Back</string>
</resources>